# sea_battle_game

./: CMakeLists.txt  main.cpp  structure.gitignore  structure.txt
include/: board.hpp  constants.hpp  fleet.hpp  game.hpp  player.hpp  ships.hpp
tests/: test_board.cpp  test_fleet.cpp  test_game.cpp  test_player.cpp  test_ships.cpp
